# frappe_sentry

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  setup.py
sentry/: __init__.py  hooks.py  session.py
sentry/config/: integrations.py
sentry/public/: build.json
sentry/public/js/: index.js  sentry.bundle.js  status_codes.js  version.js
sentry/sentry/doctype/sentry_settings/: sentry_settings.js  sentry_settings.json  sentry_settings.py  test_sentry_settings.py
sentry/sentry/workspace/sentry_integrations/: sentry_integrations.json
sentry/sentry/workspace/sentry_settings/: sentry_settings.json
